<resources>
    <string name="app_name">Quiz App</string>
    <string name="question1">1. Which languages you prefer to user in embedded systems ?</string>
    <string name="answer_question_1_a">A. C language</string>
    <string name="answer_question_1_b">B. C++ language</string>
    <string name="answer_question_1_c">C. Java language</string>

    <string name="question2">2. point out the error in the program ? \n struct emp { \n int code; \n struct emp e; \n };</string>
    <string name="answer_question_2_a">A. Error in structure declaration</string>
    <string name="answer_question_2_b">B. Linker error</string>
    <string name="answer_question_2_c">C. No error</string>
    <string name="answer_question_2_d">D. None of the above</string>

    <string name="question3">3. Which of the following special symbol allowed in a variable name? </string>
    <string name="answer_question_3_a">A. * (asterisk)</string>
    <string name="answer_question_3_b">B. _ (Under score)</string>
    <string name="answer_question_3_c">C. # (hash tag)</string>
    <string name="answer_question_3_d">D. | (Pipeline)</string>

    <string name="question4">4. What is the official IDE for android ?</string>
    <string name="answer_question_4">Answer Here</string>

    <string name="submitQuiz">Submit</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="name_of_operating_system">Name of operating system: </string>
    <string name="result">Result: </string>
    <string name="grade">Grade: </string>
    <string name="thank_you">Thank you! </string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="D">D</string>
    <string name="F">F</string>
    <string name="c_language">C language</string>
    <string name="java_language">Java Language</string>
    <string name="c_plus_language">C++ Language</string>
    <string name="php">PHP</string>

</resources>
